# string-art

./: .gitignore  README.md  TODO.md  einstein_03.avif  image.py  main.py  paint.py  point.py  pyproject.toml  requirements.txt
dotpainting/: go.mod  main.go
go/: go.sum  main.go
images/: ezio4.jpg~  jules.jpg~
string-art/: point_generation.py  stringart.py
